terraform/test-data/terraform/variables/tf-modules-subdirs/modules/fake_module/variables.tf
variable "fake_var_1" {}
variable "fake_var_2" {}
<error descr="Variable 'fake_local_duplicate' declared multiple times">variable "fake_local_duplicate" {}</error>
<error descr="Variable 'fake_local_duplicate' declared multiple times">variable "fake_local_duplicate" {}</error>
variable "fake_var_4" {}